<resources>
    <string name="text_tryb_nauki">WYBIERZ TRYB NAUKI</string>
    <string name="text_tryb_lista">LISTA</string>
    <string name="text_tryb_mapa">MAPA KONTUROWA</string>
    <string name="text_pojedynek_wybierz_obszar">POJEDYNEK\nWYBIERZ OBSZAR</string>
    <string name="text_gratulacje">Gratulacje!</string>
    <string name="text_niestety">Niestety!</string>
    <string name="text_wygrales">WYGRAŁEŚ!</string>
    <string name="text_przegrales">PRZEGRAŁEŚ!</string>
    <string name="wersja_jezykowa">pl</string>
    <string name="text_powrot_do_menu">POWRÓT DO MENU</string>
    <string name="text_powtorki">POWTÓRKI</string>
    <string name="text_testy">TESTY</string>
    <string name="text_testy_i_gry">TESTY I GRY</string>
    <string name="text_pojedynek_btn">POJEDYNEK</string>
    <string name="text_rodzaje_testow">WYBIERZ TEST LUB GRĘ</string>
    <string name="app_name">Flagi i stolice świata</string>
    <string name="text_flagi_i_stolice_swiata">FLAGI I STOLICE ŚWIATA</string>
    <string name="text_flagi_i_stolice_swiata_nauka">FLAGI I STOLICE\n</string>
    <string name="text_swiata">ŚWIATA</string>
    <string name="text_europy">EUROPY</string>
    <string name="text_a_poludniowej">AMERYKI PŁD.</string>
    <string name="text_a_polnocnej">AMERYKI PŁN.</string>
    <string name="text_afryki">AFRYKI</string>
    <string name="text_azji">AZJI</string>
    <string name="text_australii">AUSTRALII</string>
    <string name="text_exit_komunikat">Naciśnij jeszcze raz aby wyjść</string>
    <string name="text_twoje_wyniki">TWOJE WYNIKI</string>
    <string name="text_ustawienia">USTAWIENIA</string>
    <string name="text_menu">MENU</string>
    <string name="text_numer">NR.</string>
    <string name="text_obszar">OBSZAR</string>
    <string name="text_poprawne">POPRAWNE</string>
    <string name="text_pobierz_teraz">POBIERZ TERAZ</string>
    <string name="text_przypomnij_pozniej">PRZYPOMNIJ PÓŹNIEJ</string>
    <string name="text_dostepna_jest_nowa_wersja_aplikacji">DOSTĘPNA JEST NOWSZA WERSJA APLIKACJI</string>
    <string name="text_nauka">NAUKA</string>
    <string name="text_kraj">Kraj:</string>
    <string name="text_stolica">Stolica:</string>
    <string name="text_test_flagi">TEST - FLAGI</string>
    <string name="text_test_stolice">TEST - STOLICE</string>
    <string name="text_wstecz">WSTECZ</string>
    <string name="text_koniec">KONIEC</string>
    <string name="text_alfabetycznie">ALFABETYCZNIE</string>
    <string name="text_losowo">LOSOWO</string>
    <string name="text_nauka_wybierz_obszar">NAUKA\nWYBIERZ OBSZAR</string>
    <string name="text_test_wybierz_obszar">TEST\nWYBIERZ OBSZAR</string>
    <string name="text_flagi_i_stolice_swiata_test">FLAGI I STOLICE ŚWIATA TEST</string>
    <string name="text_przerwij_test">PRZERWIJ TEST</string>
    <string name="text_dobrze">Dobrze:</string>
    <string name="text_zle">Źle:</string>
    <string name="text_brawo">BRAWO! UDZIELIŁEŚ</string>
    <string name="text_swietnie">ŚWIETNIE! UDZIELIŁEŚ</string>
    <string name="text_dobrze_">DOBRZE! UDZIELIŁEŚ</string>
    <string name="text_slabo">SŁABO! UDZIELIŁEŚ</string>
    <string name="text_fatalnie">FATALNIE! UDZIELIŁEŚ</string>
    <string name="text_poprawnych_odpowiedzi">POPRAWNYCH ODPOWIEDZI</string>
    <string name="text_rada_100">PAMIĘTAJ ABY CO JAKIŚ CZAS POWTARZAĆ MATERIAŁ</string>
    <string name="text_rada_80">JEST DOBRZE, ALE CZĘSTO POWTARZAJ MATERIAŁ</string>
    <string name="text_rada_60">UCZ SIĘ DALEJ ABY POPRAWIĆ SWÓJ WYNIK</string>
    <string name="text_rada_40">WRÓĆ DO TRYBU NAUKI I POĆWICZ JESZCZE</string>
    <string name="text_rada_20">PRZED TOBĄ JESZCZE DUŻO NAUKI. POWODZENIA</string>
    <string name="text_wybierz_jezyk">Wybierz język:</string>
    <string name="text_napisz_do_mnie">Napisz do mnie:</string>
    <string name="text_ocen_aplikacje">Oceń aplikację:</string>
    <string name="text_zobacz_inne_apki">Inne aplikacje:</string>
    <string name="text_przewodnik">Przewodnik:</string>
    <string name="text_ocen_apke_dialog_tytul">Oceń aplikację</string>
    <string name="text_ocen_apke_dialog_tresc">Jest mi bardzo miło, że korzystasz z tej aplikacji.
        Będę wdzięczny jeśli zechcesz poświęcić chwilę i wystawić swoją ocenę.
        Dzięki za wsparcie i uwagi!</string>
    <string name="text_ocen_apke_dialog_tak">Oceń teraz</string>
    <string name="text_ocen_apke_dialog_nie">Nie</string>
    <string name="text_ocen_apke_dialog_pozniej">Później</string>
    <string name="text_next">Dalej</string>
    <string name="text_skip">Pomiń</string>
    <string name="text_start">Rozpocznij</string>
    <string name="text_wstecz_intro">Wstecz</string>
    <string name="text_tytul_intro_s1">Tryby pracy aplikacji</string>
    <string name="text_opis_intro_s1">Aplikacja zawiera tryb nauki i tryb testowy, dzięki któremu sprawdzisz poziom przyswojonej wiedzy.</string>
    <string name="text_tytul_intro_s2">Nauka</string>
    <string name="text_opis_intro_s2">W trybie nauki przedstawione są trzy podstawowe informacje na temat danego kraju: jego nazwa, stolica i flaga.</string>
    <string name="text_tytul_intro_s3">Testy</string>
    <string name="text_opis_intro_s3">Wykonanie testu możliwe jest w dwóch wariantach: test flag - w którym należy dopasować flagę do kraju oraz test stolic - w którym należy dopasować stolicę do kraju.</string>
    <string name="text_tytul_intro_s4">Wyniki</string>
    <string name="text_opis_intro_s4">Za każdym razem kiedy ukończysz test uzyskany wynik jest zapisywany do listy z Twoimi wynikami. Dzięki temu możesz łatwiej kontrolować swoje postępy!</string>
    <string name="text_zamknij">Zamknij</string>
    <string name="text_trwa_ladowanie_danych">Czekaj! Trwa ładowanie danych...</string>
    <string name="text_nie_udalo_sie_zaladowac_danych">Nie udało się załadować danych. Sprawdź połączenie z Internetem.</string>
</resources>