<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_layout_wybor_nauka_test_koniec"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/text_menu"
        android:id="@+id/txt_flagi_i_stolice_swiata"
        android:textAlignment="center"
        android:textSize="@dimen/font_height_h1"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentTop="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:lineSpacingExtra="0dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_flagi_i_stolice_swiata"
        android:layout_above="@+id/btnKoniecWybor"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/l_btn_nauka"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_wstecz_xml"
                android:paddingBottom="@dimen/padding_button_h1"
                android:paddingTop="@dimen/padding_button_h1"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:onClick="f_btn_nauka"
                android:layout_marginBottom="@dimen/margin_bottom">

                <TextView
                    android:id="@+id/tv_btn_nauka"
                    android:text="@string/text_nauka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_height_button"
                    android:textColor="@color/colorWhite"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/l_btn_testy"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_wstecz_xml"
                android:paddingBottom="@dimen/padding_button_h1"
                android:paddingTop="@dimen/padding_button_h1"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:onClick="pokaz_layout_wybor_testu"
                android:layout_below="@+id/l_btn_nauka"
                android:layout_marginBottom="@dimen/margin_bottom">

                <TextView
                    android:id="@+id/tv_btn_testy"
                    android:text="@string/text_testy_i_gry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_height_button"
                    android:textColor="@color/colorWhite"/>

            </RelativeLayout>

        <RelativeLayout
            android:id="@+id/l_btn_twoje_wyniki"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_wstecz_xml"
            android:paddingBottom="@dimen/padding_button_h1"
            android:paddingTop="@dimen/padding_button_h1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="f_btn_twoje_wyniki"
            android:layout_below="@+id/l_btn_testy"
            android:layout_marginBottom="@dimen/margin_bottom">

            <TextView
                android:id="@+id/tv_btn_twoje_wyniki"
                android:text="@string/text_twoje_wyniki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_height_button"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/l_btn_baza_powtorek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_wstecz_xml"
            android:paddingBottom="@dimen/padding_button_h1"
            android:paddingTop="@dimen/padding_button_h1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="f_btn_twoje_powtorki"
            android:layout_below="@+id/l_btn_twoje_wyniki"
            android:layout_marginBottom="@dimen/margin_bottom">

            <TextView
                android:id="@+id/tv_btn_baza_powtorek"
                android:text="@string/text_powtorki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_height_button"
                android:textColor="@color/colorWhite"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/l_btn_ustawienia"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_wstecz_xml"
            android:paddingBottom="@dimen/padding_button_h1"
            android:paddingTop="@dimen/padding_button_h1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:onClick="f_btn_ustawienia"
            android:layout_below="@+id/l_btn_baza_powtorek"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_btn_ustawienia"
                android:text="@string/text_ustawienia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_height_button"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnKoniecWybor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_wstecz_xml"
        android:paddingBottom="@dimen/padding_button_h2"
        android:paddingTop="@dimen/padding_button_h2"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:onClick="f_btn_koniec"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txt_btn_koniec_1"
            android:text="@string/text_koniec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_height_button"
            android:textColor="@color/colorWhite"
            />

    </RelativeLayout>



</RelativeLayout>